Kubernetes_file/K8_manifest.yaml
#certificate-manager
#kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.4.0/cert-manager.yaml

#Namespace 
apiVersion: v1
kind: Namespace
metadata:
  name: ms

---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: ms
spec:
  replicas: 5
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: <your-dockerhub-username>/wisecow:latest
        ports:
        - containerPort: 4499

---
#services LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: ms
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
  type: LoadBalancer

---
#ingress path base 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: ms
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - your-domain.com
    secretName: wisecow-tls
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
